--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,16 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>FinanceTracker</name>
     <description>FinanceTracker Rest API</description>
+
     <properties>
         <java.version>17</java.version>
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <jwt.version>4.4.0</jwt.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <flyway.version>9.22.2</flyway.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -89,6 +92,20 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-mysql -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
+
 
     </dependencies>
 
