--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,17 @@ spring.datasource.password=
 #Configuration for Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.current_session_context_class=thread
+spring.jpa.hibernate.ddl-auto=validate
 
 #Filter for recognition of PUT, PATCH AND DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
 
-JWT-Secret=""
+#Configuration for Flyway
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.user=
+spring.flyway.password=
+spring.flyway.baseline-description="init"
+spring.flyway.baseline-version=0
+
+JWT-Secret="SECRET"
